[package]
name = "martin-tile-utils"
version = "0.6.7"
exclude = [
    # Exclude the fixtures directory from the package - it's only used for tests.
    "/fixtures",
]
edition.workspace = true
rust-version.workspace = true

[dependencies]
brotli.workspace = true
flate2.workspace = true
serde.workspace = true

[dev-dependencies]
approx.workspace = true
rstest.workspace = true
