[package]
name = "martin"
version = "1.1.0"
default-run = "martin"
edition.workspace = true
rust-version.workspace = true

# see https://github.com/kornelski/cargo-deb/blob/main/systemd.md#packagemetadatadebsystemd-units-options
[lib]
path = "src/lib.rs"

[[bin]]
name = "martin"
path = "src/bin/martin.rs"

[[bin]]
name = "martin-cp"
path = "src/bin/martin-cp.rs"
required-features = ["mbtiles"]

[[bench]]
name = "sources"
harness = false
required-features = ["_tiles"]

[[bench]]
name = "postgres_discovery"
harness = false
required-features = ["postgres"]

[features]
default = [
    "fonts",
    "lambda",
    "mbtiles",
    "metrics",
    "pmtiles",
    "postgres",
    "sprites",
    "styles",
    "webui",
]
unstable-cog = ["martin-core/unstable-cog", "_tiles"]
unstable-rendering = ["styles", "martin-core/unstable-rendering", "dep:image"]
fonts = ["martin-core/fonts"]
lambda = ["dep:lambda-web"]
mbtiles = ["martin-core/mbtiles", "dep:mbtiles", "_tiles"]
metrics = ["dep:actix-web-prom"]
pmtiles = ["martin-core/pmtiles", "dep:object_store", "_tiles"]
postgres = [
    "martin-core/postgres",
    "dep:enum-display",
    "dep:json-patch",
    "dep:postgis",
    "dep:postgres-protocol",
    "_tiles",
]
sprites = ["martin-core/sprites"]
styles = ["martin-core/styles", "dep:walkdir"]
webui = ["dep:actix-web-static-files", "dep:static-files", "dep:walkdir"]
_tiles = ["martin-core/_tiles"]

[dependencies]
actix-cors.workspace = true
actix-http.workspace = true
actix-middleware-etag.workspace = true
actix-rt.workspace = true
actix-web.workspace = true
actix-web-prom = { workspace = true, optional = true }
actix-web-static-files = { workspace = true, optional = true }
async-trait.workspace = true
clap.workspace = true
dashmap.workspace = true
enum-display = { workspace = true, optional = true }
env_logger.workspace = true
futures.workspace = true
image = { workspace = true, optional = true }
itertools.workspace = true
json-patch = { workspace = true, optional = true }
lambda-web = { workspace = true, optional = true }
log.workspace = true
martin-core.workspace = true
martin-tile-utils.workspace = true
mbtiles = { workspace = true, optional = true }
num_cpus.workspace = true
object_store = { workspace = true, optional = true }
postgis = { workspace = true, optional = true }
postgres-protocol = { workspace = true, optional = true }
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
serde_yaml.workspace = true
static-files = { workspace = true, optional = true }
subst.workspace = true
thiserror.workspace = true
tilejson.workspace = true
tokio = { workspace = true, features = ["io-std"] }
url.workspace = true
walkdir = { workspace = true, optional = true }

[build-dependencies]
static-files = { workspace = true, optional = true }
walkdir = { workspace = true, optional = true }

[dev-dependencies]
approx.workspace = true
criterion.workspace = true
ctor.workspace = true
indoc.workspace = true
insta = { workspace = true, features = ["json", "yaml", "redactions"] }
pprof.workspace = true
rstest.workspace = true
tempfile.workspace = true
testcontainers-modules.workspace = true
